# deltaml-bench-inspect

./: .gitignore  .gitignoret  MANIFEST.in  README.md  cleanup_gpu.sh  pyproject.toml  run_benchmark.sh
.github/workflows/: ci.yml
anti_cheat_validation/: anti_cheat_validation.py  forensic_log_grader.py
archive/: README.md
deltamlbench/: README.md  __init__.py
deltamlbench/ai_rd_fix_embedding/: ai_rd_fix_embedding.py
deltamlbench/ai_rd_optimize_llm_foundry/: ai_rd_optimize_llm_foundry.py  requirements.txt
deltamlbench/ai_rd_restricted_mlm/: ai_rd_restricted_mlm.py
deltamlbench/ai_rd_rust_codecontests_inference/: build_steps.json  requirements.txt
deltamlbench/ai_rd_small_scaling_law/: ai_rd_small_scaling_law.py
deltamlbench/ai_rd_triton_cumsum/: manifest.yaml
deltamlbench/pwc_5_datasets_code_cl/: README.md  build_steps.json  manifest.yaml  pwc_5_datasets_code_cl.py  requirements.txt
deltamlbench/pwc_astock_srl_factors/: README.md  build_steps.json  (+2 more)
deltamlbench_inspect/: __init__.py  cli.py  durable_audit.py  evaluation.py  evaluation_policies.yaml  integrity_judge.py  readiness.py  report_collector.py  review_bundle.py  runtime.py  scorer_driver.py  solvers.py  tools.py
docs/: PRODUCTION_READINESS.md  README.md  SCORER_PROTOCOL.md  TASK_SUITABILITY_AUDIT.md
metr/: __init__.py  task_protected_scoring.py
modular-public/: base.py  generate_manifest.py  inspect_runtime.py  main.py  pyproject.toml  requirements.txt  runtime_types.py  templates.py
scripts/: bootstrap_inspect.sh  verify_distribution.py
tests/: test_durable_audit.py  test_evaluation.py  test_integrity_judge.py  test_modular_runtime.py  test_readiness.py
(+423 files in other folders)
