[project]
name = "deltamlbench-inspect"
version = "0.1.0"
description = "Inspect-native runtime for DeltaMLBench PWC tasks"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiohttp>=3.9",
  "anthropic>=0.62",
  "google-genai>=1.27",
  "inspect_ai>=0.3.121,<0.4",
  "openai>=1.99",
  "pyyaml>=6.0",
  "tiktoken>=0.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deltamlbench_inspect", "deltamlbench_inspect.tasks", "metr"]
